--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100 w-100">
   <head>
     <meta charset="UTF-8" />
     <title>Z-TV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      defer
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    ></script>
   </head>
 
-  <body>
-
+  <body class="h-100 w-100">
+    <div id="root" class="h-100 w-100"></div>
   </body>
 </html>
