--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   </head>
 
   <body class="h-100 w-100">
-    <div id="root" class="h-100 w-100"></div>
+    <div id="root" class="h-100 w-100 g-0"></div>
   </body>
 </html>
