--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="h-100 w-100">
   <head>
     <meta charset="UTF-8" />
-    <title>Z-TV</title>
+    <title>What if... | Anything as Netflix</title>
+    <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
       defer
